made site more responsive

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 </div>
                 <div class="blog-bottom">
                     <img class="blog-card-bottom-image" src="./images/IMAGE HERE (2).png" alt="">
+                    
                 </div>
                 <div class="blog-author">
                     <b class="blog-author">Bobby Wagner</b>
@@ -140,8 +141,8 @@
         <!-- FAQ SECTION -->
         <div class="faq-section">
             <div class="faq-content">
-                <h1>Have <br> a question</h1>
-                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique mollitia <br>nam animi exercitationem et eum enim nulla veritatis,</h4>
+                <h1>Have a question</h1>
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique mollitia nam animi exercitationem et eum enim nulla veritatis,</h4>
                 <h4>Do you have any question about anythings ?</h4>
 
                 <button >Contact Us</button>
